--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,7 @@ ol li div.index {
     padding: 5px;
     width: 32px;
     clear: left;
+    height: 100px;
 }
 
 ol li div.text {
@@ -116,6 +117,7 @@ ol li div.text {
     display: block;
     padding: 5px;
     clear: none;
+    font-size: 12px;
     width: calc(100% - 42px);
 }
 
