--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,7 +135,7 @@ ol li div.index {
     padding: 5px;
     width: 32px;
     clear: left;
-    height: 110px;
+    height: 120px;
 }
 
 ol li div.text {
@@ -144,13 +144,14 @@ ol li div.text {
     display: block;
     padding: 5px;
     clear: none;
-    font-size: 12px;
+    font-size: 11px;
     width: calc(100% - 42px);
 }
 
 
 ol li div.text .title {
-    font-size: 16px;
+    font-size: 13px;
+    text-transform: uppercase;
 }
 
 @media print {
